# envinit

./: .gitignore  .gitmodules  README.md  envinit.py  pyproject.toml
core/: __init__.py  cli.py  cmdcli.py  user.py  utils.py
core/cmds/: __init__.py  cmd_builtin.py  utils.py
