[project]
name = "envinit"
version = "None"
description = "None"
authors = [
    {name = "k1d", email = "cps3362521@gmail.com"},
]
dependencies = ["prompt-toolkit>=3.0.50", "rich>=13.9.4", "ptpython>=3.0.29", "ipython>=8.32.0", "pylint>=3.3.4", "fuckit>=4.8.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Mozilla Public License Version 2.0"}


[tool.pdm]
distribution = false
